--- a/best-practices.mdx
+++ b/best-practices.mdx
@@ -18,7 +18,8 @@ Define integrations through the Chalk dashboard and check that they're connectin
 ### Avoid naming your data sources by their "type", e.g. don't call your postgres data source "postgres"
 
 Though this works, it can lead to ambiguity in SQL resolvers when you add multiple data sources of the same type. This occurs
-because [Chalk lets you refer to "single copy" data sources by either their type or their name](/fraud-3#online-data).
+because Chalk lets you refer to data sources by their type if you've only linked one data source of that type to Chalk. In
+general, to future proof your resolvers, you should refer to them by their name.
 
 ## Features
 
@@ -26,11 +27,11 @@ because [Chalk lets you refer to "single copy" data sources by either their type
 
 Features fully specify what you want your data to look like. Once you have an understanding of the inner relations, writing resolvers for your features becomes easier.
 
-### Avoid dataclass feature types, instead use separate features sets or unpack the data
+### Avoid dataclass feature types, instead use separate feature sets or unpack the data
 
-While Chalk allows for dataclass feature types, they should be avoided. They don't always play nicely with serialization and can cause tough to debug errors. We recommend
+While Chalk allows for dataclass feature types, they should be avoided. They don't always play nicely with serialization and can cause tough-to-debug errors. We recommend
 either unpacking the nested class into basic types or defining and joining an additional Chalk feature set if the nested component is truly a separate entity. Defining a
-separate feature set, also makes the underlying data easier to monitor and test.
+separate feature set also makes the underlying data easier to monitor and test.
 
 ### Tag and annotate your features
 
@@ -71,41 +72,42 @@ class User:
   name: str
 ```
 
-You can also [apply restrictions or enforce feature annotation for your entire project](/validation#feature-validation-requirements). For instance, you can block deployment if features are not tagged or described.
+You can also [apply restrictions or enforce feature annotation for your entire project](/docs/validation#feature-validation-requirements). For instance, you can block deployment if features are not tagged or described.
 
 ### Keep feature definitions separated from resolvers
 
 Features should be defined in separate files from resolvers (with the exception of underscore features).
 
-### Define All Your Features in the Same File
+### When starting your Chalk implementaiton, define all your feature sets in the same file
 
-Although it can get a little lengthy, we recommend defining your features in a single file. This makes expressing joins between features easier and prevents circular
-dependencies.
+Although it can get a bit lengthy, we recommend starting by defining your features in a single file.
+This makes expressing joins between features easier and prevents circular dependencies.
 
 ### Add Validations For Your Features
 
-[Validations for your features](/validation#feature-values) can prevent incorrect data from being written to your offline store. They can provide an even stricter complement to monitoring, ensuring that nothing
+[Validations for your features](/docs/validation#feature-values) can prevent incorrect data from being written to your offline store. They can provide an even stricter complement to monitoring, ensuring that nothing
 is going wrong with the feature you are calculating.
 
 ### Use implicit join syntax
 
-Joins between feature sets can be specified in a number of different ways. We recommend using an implicit join syntax, which [we cover in the join section of the docs](/has-one#recommended-implementation).
+Joins between feature sets can be specified in a number of different ways. We recommend using an implicit join syntax, which [we cover in the join section of the docs](/docs/has-one#recommended-implementation).
 
 ## Resolvers
 
 ### Use underscore resolvers for very simple resolver definitions
 
-[Underscore resolvers](/underscore) should be used for relatively simple calculations: your underscore resolver definitions should fit inline.
+[Underscore resolvers](/docs/underscore) should be used for relatively simple calculations: your underscore resolver definitions should fit inline.
 
 ### Use SQL resolvers to read data from your raw datasets
 
-While python resolvers can be used to read data from your data sources, SQL resolvers are preferred.
+While Python resolvers can be used to read data from your data sources, SQL resolvers are preferred. SQL resolvers
+allow for direct execution against your data sources and additional optimizations, making them more efficient.
 
 ### Explicitly list columns in a select statement for SQL file resolvers
 
 Select statements in SQL resolvers should be explicit: avoid using the \* syntax.
 
-### Give your python resolver functions (or, equivalently, SQL resolver filenames) clear names
+### Give your Python resolver functions (or, equivalently, SQL resolver filenames) clear names
 
 Resolver names are used in the Chalk dashboard to identify resolvers. They should be clear and concise.
 
@@ -113,9 +115,9 @@ Resolver names are used in the Chalk dashboard to identify resolvers. They shoul
 
 Resolver inputs and outputs must belong to the same feature set, but joins can allow resolvers to connect data between feature sets.
 
-### Transform your Chalk DataFrame to pandas or polars
+### Transform your Chalk DataFrame to Pandas or Polars
 
-Don't worry about converting Chalk DataFrames to pandas or polars in a python resolver—the transformation is cheap. We use arrow (and so do pandas and polars) so moving data from a Chalk DataFrame to either is close to free
+Don't worry about converting Chalk DataFrames to [Pandas](https://pandas.pydata.org/) or [Polars](https://pola.rs/) in a Python resolver—the transformation is cheap. We use arrow (and so do Pandas and Polars) so moving data from a Chalk DataFrame to either is close to free
 
 ## Querying
 
@@ -123,7 +125,7 @@ Don't worry about converting Chalk DataFrames to pandas or polars in a python re
 
 The Chalk CLI should be used to run simple online queries. For more complex use cases, you should use one of Chalk's API clients.
 
-### Created named queries for your commonly executed queries
+### Create named queries for your commonly executed queries
 
 Naming queries makes it easier to evaluate and track the performance of specific queries over time. This can be done using the `query_name`
 parameter in the query functions of your client of choice.
@@ -159,7 +161,7 @@ company_chalk/
 Your `.chalkignore` file should include your scripts, notebooks, and tests: anything that you are not actively using in your deployment should be put there so that
 non-deployment code does not clutter or interfere with your deployment.
 
-### Use the `@before_all` decorateor to configure global variables for your resolvers
+### Use the `@before_all` decorator to configure global variables for your resolvers
 
 Global setup for resolvers should be done through a function decorated with the [@before_all decorator](generic#initializing). This also allows for unique setups for different environments.
 
@@ -183,24 +185,22 @@ model_file_path=f"{os.environ['TARGET_ROOT']}/model.joblib"
 
 ## Observability / Testing
 
-### Set up monitoring on your most important features and resolvers, early
+### Set up monitoring on your most important features and resolvers early
 
-[Monitoring](/metricmonitor) helps you catch tricky bugs early and gives you guarentees about the data you are generating and serving. You should configure monitoring for your
+[Monitoring](/metricmonitor) helps you catch tricky bugs early and gives you guarantees about the data you are generating and serving. You should configure monitoring for your
 important features and resolvers early in your implementation.
 
 ### Unit test your resolvers to make sure they're functioning as expected
 
-[Unit test](/unit-tests) your resolvers!
+Chalk makes it easy to set up [unit tests](/docs/unit-tests) for your resolvers using Pytest or any other python testing framework.
 
 ### Improve CI/CD in your Chalk repository using our GitHub Actions workflow
 
 Chalk has a [GitHub Actions integration](/docs/github-actions)—you can use it to create branch deployments or run queries
 as part of your code development cycle.
 
-[Unit test](/unit-tests) your resolvers!
-
 ## Security
 
 ### Generate and use access tokens to set and restrict the permissions for your different users
 
-Scope your Chalk user permissions with [access tokens](/docs/online-authentication): these can be programatically generated through Chalk Clients or in the dashboard. Give your users only the permissions they need.
+Scope your Chalk user permissions with [access tokens](/docs/online-authentication). These can be programatically generated through Chalk Clients or in the dashboard. Give your users only the permissions they need.
